large changes to sidebar and aesthetics
- changed up sidebar structure to better reflect docs
- increased aesthetics to be on-brand

--- a/_plugins/changelog/style.css
+++ b/_plugins/changelog/style.css
@@ -62,7 +62,7 @@
     width: 100%;
     display: block;
     padding: 5px 20px;
-    background: #fff;
+    background: #ffffff;
     position: relative;
     text-align: left;
   }
