--- a/_style/nav.css
+++ b/_style/nav.css
@@ -28,3 +28,8 @@ nav .nav-dropdown {
 .nav-dropdown-container a.active {
     border-bottom: none;
 }
+.h1 {
+    font-family: Eina,system-ui,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: -.02em;
+}
