--- a/_style/styles.css
+++ b/_style/styles.css
@@ -1,7 +1,7 @@
 :root {
 
     /* Docs wide settings */
-    --theme-color   : #142144;
+    --theme-color                       : #027AFF;
     --content-max-width                 : 55em;
 
     --heading-h1-font-weight            : 800 ;
@@ -46,13 +46,37 @@
     /* Sidebar active state */
 
     /* Sidebar toggle */
-    --sidebar-toggle-background                   : #027AFF;
-    --sidebar-toggle-icon-color                   : white;
+    --sidebar-toggle-background                   : rgb(255, 255, 255);
+    --sidebar-toggle-icon-color                   : rgb(5, 126, 224);
 
 
     --search-input-border-radius             : 5rem;
     --search-input-margin                    : 0.5;
-    --search-input-border-width              : 2px;
+    --search-input-border-width              : 1px;
+    --search-input-border-color              : #027AFF;
+
+    /* Order */
+    --search-flex-order                      : 1;
+
+    /* Results */
+    --search-result-heading-color            : #027AFF;
+    --search-result-heading-font-size        : var(--base-font-size);
+    --search-result-heading-font-weight      : normal;
+    --search-result-heading-margin           : 0 0 0.25em;
+    --search-result-item-border-color        : var(--mono-tint2);
+    --search-result-item-border-style        : solid;
+    --search-result-item-border-width        : 0 0 1px 0;
+    --search-result-item-color               : ;
+    --search-result-item-font-size           : ;
+    --search-result-item-font-weight         : normal;
+    --search-result-item-margin              : ;
+    --search-result-item-padding             : 1em 0;
+    --search-result-keyword-background       : var(--mark-background);
+    --search-result-keyword-border-radius    : 5rem;
+    --search-result-keyword-color            : var(--mark-color);
+    --search-result-keyword-font-weight      : normal;
+    --search-result-keyword-margin           : 0 0.1em;
+    --search-result-keyword-padding          : 0.2em 0;
 
     --sidebar-name-margin                         : 1.5rem 0 0;
     --sidebar-name-padding                        : -3rem;
@@ -77,4 +101,67 @@
     --sidebar-nav-link-padding                    : 0em 0;
     --sidebar-nav-link-border-color--active       : #027AFF;
 
+    /* Root */
+    --navbar-root-background                        : ;
+    --navbar-root-background--active                : ;
+    --navbar-root-background--hover                 : ;
+    --navbar-root-border-color                      : ;
+    --navbar-root-border-color--active              : ;
+    --navbar-root-border-color--hover               : ;
+    --navbar-root-border-radius                     : ;
+    --navbar-root-border-style                      : solid;
+    --navbar-root-border-style--active              : ;
+    --navbar-root-border-style--hover               : ;
+    --navbar-root-border-width                      : ;
+    --navbar-root-color                             : ;
+    --navbar-root-color--active                     : ;
+    --navbar-root-color--hover                      : ;
+    --navbar-root-margin                            : 0 0 0 1.5em;
+    --navbar-root-padding                           : ;
+    --navbar-root-transition                        : all var(--duration-fast);
+    --navbar-root-text-decoration                   : ;
+    --navbar-root-text-decoration--active           : ;
+    --navbar-root-text-decoration--hover            : ;
+    --navbar-root-text-decoration-color             : ;
+    --navbar-root-text-decoration-color--active     : ;
+    --navbar-root-text-decoration-color--hover      : ;
+
+    /* Menus */
+    --navbar-menu-background                        : var(--base-background-color);
+    --navbar-menu-border-color                      : #027AFF;
+    --navbar-menu-border-radius                     : var(--border-radius-m);
+    --navbar-menu-border-width                      : 1px;
+    --navbar-menu-box-shadow                        : rgba(45,45,45,0.05) 0px 0px 1px, rgba(49,49,49,0.05) 0px 1px 2px, rgba(42,42,42,0.05) 0px 2px 4px, rgba(32,32,32,0.05) 0px 4px 8px, rgba(49,49,49,0.05) 0px 8px 16px, rgba(35,35,35,0.05) 0px 16px 32px;
+    --navbar-menu-padding                           : 0.5em;
+    --navbar-menu-transition                        : all var(--duration-fast);
+
+    /* Menu Root */
+    --navbar-menu-root-background                   : #027AFF;
+    --navbar-menu-root-background--active           : #027AFF;
+    --navbar-menu-root-background--hover            : #027AFF;
+    --navbar-menu-root-padding                      : ;
+
+    /* Menu Links */
+    --navbar-menu-link-background                   : ;
+    --navbar-menu-link-background--active           : ;
+    --navbar-menu-link-background--hover            : ;
+    --navbar-menu-link-border-color                 : ;
+    --navbar-menu-link-border-color--active         : ;
+    --navbar-menu-link-border-color--hover          : ;
+    --navbar-menu-link-border-radius                : ;
+    --navbar-menu-link-border-style                 : solid;
+    --navbar-menu-link-border-style--active         : ;
+    --navbar-menu-link-border-style--hover          : ;
+    --navbar-menu-link-border-width                 : 0;
+    --navbar-menu-link-color                        : ;
+    --navbar-menu-link-color--active                : #027AFF;
+    --navbar-menu-link-color--hover                 : #027AFF;
+    --navbar-menu-link-margin                       : 0.75em 0.5em;
+    --navbar-menu-link-padding                      : 0.2em 0;
+    --navbar-menu-link-text-decoration              : ;
+    --navbar-menu-link-text-decoration--active      : ;
+    --navbar-menu-link-text-decoration--hover       : ;
+    --navbar-menu-link-text-decoration-color        : ;
+    --navbar-menu-link-text-decoration-color--active: ;
+    --navbar-menu-link-text-decoration-color--hover : ;
 }
