--- a/_style/styles.css
+++ b/_style/styles.css
@@ -83,14 +83,8 @@
     --sidebar-name-text-align                     : center;
     --sidebar-name-font-size                      : 0;
 
-    /* Nav Headings */
-    --sidebar-nav-strong-color                    : red;
-    --sidebar-nav-strong-font-size                : ;
-    --sidebar-nav-strong-font-weight              : var(--strong-font-weight);
-    --sidebar-nav-strong-margin                   : 1.5em 0 0.5em;
-    --sidebar-nav-strong-padding                  : 0.25em 0;
 
-    /* Nav Links */
+    /* Sidebar nav Links */
     --sidebar-nav-link-color                      : #2A2B30;
     --sidebar-nav-link-color--active              : #027AFF;
     --sidebar-nav-link-color--hover               : #027AFF;
@@ -101,4 +95,13 @@
     --sidebar-nav-link-padding                    : 0em 0;
     --sidebar-nav-link-border-color--active       : #027AFF;
 
+    /* Nav bar */
+    --navbar-root-margin                            : 0 0 0 1.5em;
+    --navbar-root-padding                           : 5em;
+
+    /* Nav bar menus that drop from link */
+    --navbar-menu-link-margin                       : .75em 1em;
+    --navbar-menu-background                        : white;
+    --navbar-menu-link-color--hover                 : #027AFF;
+    --navbar-menu-link-color                        : black;
 }
